hydromel/tests/errors/sem-non-static-expr-as-reg-init.mel
#lang hydromel

# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

component C
    port w : in unsigned(32)
    port x : in unsigned(32)
    port y : out unsigned(32)
    # ERROR: Non-static expression cannot be used as an initial register value
    y = register(w, x)
end
